<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagTime</string>
    <string name="status_bar_notes_ping_msg">Ping!</string>
    <string name="tp_stat">Tagtime notify is:</string>
    <string name="result">off</string>
    <string name="editping_pingtime">Ping:&#160;&#160;</string>
    <string name="confirm">Done</string>
    <string name="nodata">No ping data found.</string>
    <string name="nogoals">No Beeminder goals linked.</string>
    <string name="editping_selecttags">Select one or more tags:</string>
    <string name="app_version">1</string>
    <string name="toggle_notes">Stop bugging me!</string>
    <string name="summary_toggle_notes">Tagtime will continue to log your pings, just quiet-like.</string>
    <string name="location_settings">Manage Locations</string>
    <string name="summary_loc_settings">Associate a tag, such as HOME, JOB, GYM, with your current location.</string>
    <string name="editping_tags_land">Enter Tags (space separated):</string>
    <string name="editping_tags_port">Select Tags:</string>
    <string name="saving_log">Saving&#8230; Please wait.</string>
    <string name="editping_keyboard">Use Keyboard</string>
    <string name="editping_buttons">Use Buttons</string>
    <string name="editping_prev">Prev</string>
    <string name="editping_next">Next</string>
    <string name="editping_noping">Could not find ping!</string>
    <string name="editping_gap">(gap: mmm minutes)</string>
    <string name="editping_nogap">(manual ping)</string>
    <string name="editgoal_create">Create Link</string>
    <string name="editgoal_confirm">Save</string>
    <string name="editgoal_delete">Unlink</string>
    <string name="editgoal_select">Select Goal</string>
    <string name="editgoal_visit">Visit Goal</string>
    <string name="editgoal_tags">Select Tags</string>
    <string name="editgoal_notags">You must select at least one tag!</string>
    <string name="editgoal_nogoal">You must select a valid goal!</string>
    
    <string name="app_title">TagTime</string>
    <string name="managedata_title">TagTime Manage Data</string>
    <string name="viewlog_title">TagTime Ping Log</string>
    <string name="editping_title">Edit TagTime Ping</string>
    <string name="viewgoals_title">TagTime Beeminder Links</string>
    <string name="editgoal_title">Edit Beeminder Link</string>
    <string name="prefs_title">TagTime Preferences</string>
    <string name="about_title">TagTime for Android</string>
    
	<!-- ABOUT DIALOG ########################################################## -->
	<string name="about_title">TagTime for Android</string>
	<string name="about_version">Version vvv build bbb</string>
	<string name="about_text">TagTime is a stochastic sampler to measure what you spend your time on.\nhttp://messymatters.com/tagtime</string>
	<string name="about_dismiss">Dismiss</string>
	<string name="about_changelog">ChangeLog</string>
	<string name="about_googleplay">Visit on Google Play</string>

</resources>