<?xml version="1.0" encoding="utf-8"?>
<!-- PORTRAIT LAYOUT -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/editgoal_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/goalinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:gravity="left"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:gravity="left"
        android:textSize="14sp" />

    <Button
        android:id="@+id/select"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editgoal_select"
        android:textSize="18px" />

    <TextView
        android:id="@+id/tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:gravity="left"
        android:textSize="14sp" />

    <Button
        android:id="@+id/select_tags"
        android:layout_gravity="center"
        android:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editgoal_tags"
        android:textSize="18px" />

    <TextView
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="10dip"
        android:gravity="left"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/editgoal_confirm"
        android:textSize="18px" />

    <Button
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editgoal_delete"
        android:textSize="18px" />

</LinearLayout>