<?xml version="1.0" encoding="utf-8"?>
<!-- PORTRAIT LAYOUT -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_margin="5dip">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="20sp"
			android:text="@string/editping_pingtime" />
		<TextView android:id="@+id/pingtime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="20sp" />
	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/editping_tags_port" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="3">
		<LinearLayout android:id="@+id/lintags"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical" />
	</ScrollView>

	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
	  android:textSize="18px"
		android:layout_height="wrap_content" android:layout_width="fill_parent"/>

</LinearLayout>