<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2012 Uluc Saranli
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="110dip"
        android:layout_height="110dip"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dip"
        android:contentDescription=""
        android:src="@drawable/tagtime_01" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:text="@string/about_version" />

    <ScrollView
        android:id="@+id/about_scroll"
        android:layout_width="fill_parent"
        android:layout_height="210dip"
        android:layout_below="@+id/about_version" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_text" />

            <Button
                android:id="@+id/about_rate"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:text="@string/about_googleplay"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>